--- a/templates/base.html
+++ b/templates/base.html
@@ -226,6 +226,7 @@
               <li class="mb-1"><a class="link-secondary text-decoration-none" href="/blog">Blog</a></li>
               <li class="mb-1"><a class="link-secondary text-decoration-none" href="https://www.lookupprice.com/" target="_blank">Lookupprice.com</a></li>
               <li class="mb-1"><a class="link-secondary text-decoration-none" href="https://www.reduceimagesizer.com" target="_blank">Reduce Image Sizer</a></li>
+              <li class="mb-1"><a class="link-secondary text-decoration-none" href="https://www.imageupgradeai.com" target="_blank">Image Enhancer</a></li>
               <li class="mb-1"><a class="link-secondary text-decoration-none" href="https://apps.apple.com/tr/app/nourish-cuisine/id6450790012" target="_blank">Nourish IOS App</a></li>
               <li class="mb-1"><a class="link-secondary text-decoration-none" href="https://play.google.com/store/apps/details?id=com.kasimtugrulvural.yemek&hl=en&gl=US" target="_blank">Nourish Android App</a></li>
             </ul>
