--- a/templates/base.html
+++ b/templates/base.html
@@ -154,7 +154,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-EJ0KMZH81R');
+  gtag('config', 'G-Q2QYV5CHHG');
 </script>
 
 {% block header_js %}
